// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UnitGrid basic isLoading snapshot render 1`] = `
<div
  className="sc-AxiKw kpokka"
>
  <h3>
    fake
  </h3>
  <ul
    className="spinner spinning"
  >
    <li
      className="sc-AxjAm fvkVhc"
    >
      fake_singular1
      <aside>
        fake_plural1
      </aside>
    </li>
    <li
      className="sc-AxjAm fvkVhc"
    >
      fake_singular2
      <aside>
        fake_plural2
      </aside>
    </li>
  </ul>
</div>
`;

exports[`UnitGrid basic snapshot render 1`] = `
<div
  className="sc-AxiKw kpokka"
>
  <h3>
    fake
  </h3>
  <ul
    className="spinner"
  >
    <li
      className="sc-AxjAm fvkVhc"
    >
      fake_singular1
      <aside>
        fake_plural1
      </aside>
    </li>
    <li
      className="sc-AxjAm fvkVhc"
    >
      fake_singular2
      <aside>
        fake_plural2
      </aside>
    </li>
  </ul>
</div>
`;
